fix gradebook dropdown

--- a/public/Kanbas/Courses/Grades/screen.html
+++ b/public/Kanbas/Courses/Grades/screen.html
@@ -70,9 +70,13 @@
                   <td width="50%">
                     <select id="select-gradebook">
                       <option value="Gradebook">Gradebook</option>
-                      <option value="Change Gradebook">Gradebook</option>
-                      <option value="Traditional Gradebook">Gradebook</option>
-                      <option value="Individual Gradebook">Gradebook</option>
+                      <option value="Change Gradebook">Change Gradebook</option>
+                      <option value="Traditional Gradebook">
+                        Traditional Gradebook
+                      </option>
+                      <option value="Individual Gradebook">
+                        Individual Gradebook
+                      </option>
                     </select>
                   </td>
                   <td>
