add to Assignment Edit

--- a/public/Kanbas/Courses/Assignments/Edit/screen.html
+++ b/public/Kanbas/Courses/Assignments/Edit/screen.html
@@ -159,6 +159,47 @@
                 File Uploads</label
               ><br /><br />
 
+              <!-- checkboxes: Group Assignments, and Peer Reviews. -->
+              <label>Group Assignments</label><br />
+              <label
+                ><input
+                  type="checkbox"
+                  value="Option 1"
+                  name="check-group-assignment"
+                  id="chkbox-group-assignment"
+                />
+                Option 1</label
+              ><br />
+              <label
+                ><input
+                  type="checkbox"
+                  value="Option 2"
+                  name="check-group-assignment"
+                  id="chkbox-group-assignment"
+                />
+                Option 2</label
+              ><br /><br />
+
+              <label>Peer Reviews</label><br />
+              <label
+                ><input
+                  type="checkbox"
+                  value="Option 1"
+                  name="check-peer-review"
+                  id="chkbox-peer-review"
+                />
+                Option 1</label
+              ><br />
+              <label
+                ><input
+                  type="checkbox"
+                  value="Option 1"
+                  name="check-peer-review"
+                  id="chkbox-peer-review"
+                />
+                Option 1</label
+              ><br /><br />
+
               <!-- input text  -->
               Assign <br />
               <label
